--- a/css/style.css
+++ b/css/style.css
@@ -911,7 +911,7 @@ div.pp_default .pp_details {
 }
 
 #wowslider-container1 .ws_bullets a.ws_selbull, #wowslider-container1 .ws_bullets a:hover{
-	background: #FF00C4;
+	background: #B30DDB;
 }
 
 #wowslider-container1 a.ws_next, #wowslider-container1 a.ws_prev {
@@ -945,6 +945,8 @@ div.pp_default .pp_details {
 #wowslider-container1 .ws_bullets {
 	top: 96px;
 	left: -130px;
+    height: 96px;
+    width: 156px;
 }
 
 #wowslider-container1 .ws-title{
